--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script type="module" src="./src/index.ts"></script>
+    <div id="root"></div>
+    <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
